# SnakeOS

./: .gitignore  Cargo.toml  Makefile  build.sh  x86-custom.json
.cargo/: config.toml
boot/: grub.cfg
iso/boot/grub/: grub.cfg
src/: boot.s  gdt.rs  gfx.rs  idt.rs  idt.s  isr.s  kbrd.rs  kernel.rs  link.ld  mem.rs  misc.rs  tasks.c  tasks.rs  tasks.s  vga.s
src/gfx/: screen.rs  vga.s  windows.rs
