[package]
name = "SnakeOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile="0.4.4"

[lib]
crate-type = ["staticlib"]
path="src/kernel.rs"

[profile.dev]
panic = "abort"
incremental = false

[profile.release]
panic = "abort"
opt-level = 3
lto = true
incremental = false

